2005-05-20  Jakub Steiner <jimmac@ximian.com>

	* 24x24/, 16x16/: merge back some work from William Szilveszter 
	  <wszilveszter@gmail.com> (gperfection derivate theme).
		
2005-04-05  Jakub Steiner <jimmac@ximian.com>

	* 48x48/emblems/Makefile.am
	* 48x48/emblems/emblem-bin.icon.in
	* 48x48/emblems/emblem-bin.png
	* 48x48/emblems/emblem-generic.icon.in
	* 48x48/emblems/emblem-generic.png
	* 48x48/emblems/emblem-important.icon.in
	* 48x48/emblems/emblem-important.png
	* 48x48/emblems/emblem-special.icon.in
	* 48x48/emblems/emblem-special.png: remove bitmaps
	
	* scalable/emblems/Makefile.am
	* scalable/emblems/emblem-bin.icon.in
	* scalable/emblems/emblem-bin.svg
	* scalable/emblems/emblem-generic.icon.in
	* scalable/emblems/emblem-generic.svg
	* scalable/emblems/emblem-important.icon.in
	* scalable/emblems/emblem-important.svg
	* scalable/emblems/emblem-special.icon.in
	* scalable/emblems/emblem-special.svg: make them SVG 

2005-04-01  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-03-31  Steve Murphy  <murf@e-tools.com>

	* configure.in: Added "rw" to ALL_LINGUAS.

2005-03-30  Jakub Steiner <jimmac@ximian.com>

	* HACKING: this will include a style guide in future

2005-03-25  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24,32x32}/apps/evolution.png: requires bitmap versions

2005-03-25  Jakub Steiner <jimmac@ximian.com>

	* scalable/Makefile.am
	* scalable/apps/Makefile.am
	* scalable/apps/evolution.svg: new Evolution icon
	* 48x48/apps/Makefile.am
	* 48x48/apps/evolution.png
	* 32x32/apps/Makefile.am
	* 32x32/apps/evolution.png: removed

2005-03-25  Tor Lillqvist  <tml@novell.com>

	Windows "port".

	* gnome-icon-theme-zip.in: New file, to build Win32 zipfile
	distribution.

	* configure.in
	* Makefile.am: Expand and dist in.

	* configure.in: Set up new Automake conditional OS_WIN32.

	* 16x16/stock/net/Makefile.am
	* 24x24/stock/net/Makefile.am
	* 48x48/mimetypes/Makefile.am: Don't use symlinks on Win32.
