@@ -6,437 +6,437 @@ Directories=192x192/apps,192x192/devices,192x192/emblems,192x192/filesystems,192
 [192x192/apps]
 Size=192
 Context=Applications
-Type=Scalable
+Type=Fixed
 
 [192x192/devices]
 Size=192
 Context=Devices
-Type=Scalable
+Type=Fixed
 
 [192x192/emblems]
 Size=192
 Context=Emblems
-Type=Scalable
+Type=Fixed
 
 [192x192/filesystems]
 Size=192
 Context=FileSystems
-Type=Scalable
+Type=Fixed
 
 [192x192/mimetypes]
 Size=192
 Context=MimeTypes
-Type=Scalable
+Type=Fixed
 
 [96x96/apps]
 Size=96
 Context=Applications
-Type=Scalable
+Type=Fixed
 
 [96x96/devices]
 Size=96
 Context=Devices
-Type=Scalable
+Type=Fixed
 
 [96x96/emblems]
 Size=96
 Context=Emblems
-Type=Scalable
+Type=Fixed
 
 [96x96/filesystems]
 Size=96
 Context=FileSystems
-Type=Scalable
+Type=Fixed
 
 [96x96/mimetypes]
 Size=96
 Context=MimeTypes
-Type=Scalable
+Type=Fixed
 
 [72x72/apps]
 Size=72
 Context=Applications
-Type=Scalable
+Type=Fixed
 
 [72x72/devices]
 Size=72
 Context=Devices
-Type=Scalable
+Type=Fixed
 
 [72x72/emblems]
 Size=72
 Context=Emblems
-Type=Scalable
+Type=Fixed
 
 [72x72/filesystems]
 Size=72
 Context=FileSystems
-Type=Scalable
+Type=Fixed
 
 [72x72/mimetypes]
 Size=72
 Context=MimeTypes
-Type=Scalable
+Type=Fixed
 
 [48x48/apps]
 Size=48
 Context=Applications
-Type=Scalable
+Type=Fixed
 
 [48x48/devices]
 Size=48
 Context=Devices
-Type=Scalable
+Type=Fixed
 
 [48x48/emblems]
 Size=48
 Context=Emblems
-Type=Scalable
+Type=Fixed
 
 [48x48/filesystems]
 Size=48
 Context=FileSystems
-Type=Scalable
+Type=Fixed
 
 [48x48/mimetypes]
 Size=48
 Context=MimeTypes
-Type=Scalable
+Type=Fixed
 
 [48x48/stock/code]
 Size=48
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [48x48/stock/document]
 Size=48
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [48x48/stock/generic]
 Size=48
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [48x48/stock/io]
 Size=48
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [48x48/stock/net]
 Size=48
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [36x36/apps]
 Size=36
 Context=Applications
-Type=Scalable
+Type=Fixed
 
 [36x36/devices]
 Size=36
 Context=Devices
-Type=Scalable
+Type=Fixed
 
 [36x36/emblems]
 Size=36
 Context=Emblems
-Type=Scalable
+Type=Fixed
 
 [36x36/filesystems]
 Size=36
 Context=FileSystems
-Type=Scalable
+Type=Fixed
 
 [36x36/mimetypes]
 Size=36
 Context=MimeTypes
-Type=Scalable
+Type=Fixed
 
 [36x36/stock/document]
 Size=36
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [36x36/stock/generic]
 Size=36
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [32x32/apps]
 Size=32
 Context=Applications
-Type=Scalable
+Type=Fixed
 
 [32x32/filesystems]
 Size=32
 Context=FileSystems
-Type=Scalable
+Type=Fixed
 
 [32x32/mimetypes]
 Size=32
 Context=MimeTypes
-Type=Scalable
+Type=Fixed
 
 [32x32/stock/code]
 Size=32
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [32x32/stock/chart]
 Size=32
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [32x32/stock/data]
 Size=32
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [32x32/stock/document]
 Size=32
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [32x32/stock/generic]
 Size=32
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [32x32/stock/io]
 Size=32
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [32x32/stock/media]
 Size=32
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [32x32/stock/net]
 Size=32
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [32x32/stock/object]
 Size=32
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/apps]
 Size=24
 Context=Applications
-Type=Scalable
+Type=Fixed
 
 [24x24/devices]
 Size=24
 Context=Devices
-Type=Scalable
+Type=Fixed
 
 [24x24/emblems]
 Size=24
 Context=Emblems
-Type=Scalable
+Type=Fixed
 
 [24x24/filesystems]
 Size=24
 Context=FileSystems
-Type=Scalable
+Type=Fixed
 
 [24x24/mimetypes]
 Size=24
 Context=MimeTypes
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/chart]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/code]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/data]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/document]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/form]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/generic]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/image]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/io]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/media]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/navigation]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/net]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/object]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/table]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [24x24/stock/text]
 Size=24
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/apps]
 Size=16
 Context=Applications
-Type=Scalable
+Type=Fixed
 
 [16x16/devices]
 Size=16
 Context=Devices
-Type=Scalable
+Type=Fixed
 
 [16x16/filesystems]
 Size=16
 Context=FileSystems
-Type=Scalable
+Type=Fixed
 
 [16x16/mimetypes]
 Size=16
 Context=MimeTypes
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/chart]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/code]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/data]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/document]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/emoticons]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/form]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/generic]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/image]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/io]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/media]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/navigation]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/net]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/object]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/table]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [16x16/stock/text]
 Size=16
 Context=Stock
-Type=Scalable
+Type=Fixed
 
 [12x12/apps]
 Size=12
 Context=Applications
-Type=Scalable
+Type=Fixed
 
 [12x12/devices]
 Size=12
 Context=Devices
-Type=Scalable
+Type=Fixed
 
 [12x12/emblems]
 Size=12
 Context=Emblems
-Type=Scalable
+Type=Fixed
 
 [12x12/filesystems]
 Size=12
 Context=FileSystems
-Type=Scalable
+Type=Fixed
 
 [12x12/mimetypes]
 Size=12
 Context=MimeTypes
-Type=Scalable
+Type=Fixed
 
 [scalable/apps]
 Size=48
