@@ -1,3 +1,8 @@
+2005-06-16  Jakub Steiner <jimmac@ximian.com>
+
+	* index.theme.in: s/Scalable/Fixed/g for bitmap icons. Been broken
+	  for so long...
+		
 2005-05-20  Jakub Steiner <jimmac@ximian.com>
 
 	* 24x24/, 16x16/: merge back some work from William Szilveszter 
